--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,11 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+
+    <script src="https://code.jquery.com/jquery-3.3.1.js"
+            integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+            crossorigin="anonymous"></script>
+
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -25,6 +30,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React Scraper</title>
+    <script type="text/javascript">
+    $(document).ready(function(){
+      $(".modal-trigger").on("click", event =>{
+        event.preventDefault()
+        $('.modal').modal();
+      })
+    });
+    </script>
   </head>
   <body>
     <noscript>
